# programming-language-x

./: CMakeLists.txt  LICENSE  README.md  build.bat  test.plx
src/: CMakeLists.txt  ansi_escape_codes.c  ansi_escape_codes.h  ast.c  ast.h  ast_validator.c  ast_validator.h  compiler.c  compiler.h  constant_checker.c  constant_checker.h  constant_folder.c  constant_folder.h  dir.c  dir.h  error.c  error.h  leb128.c  leb128.h  llvm_ir_generator.c  llvm_ir_generator.h  macros.h  main.c  memory_pool.c  memory_pool.h  mutex.c  mutex.h  name_resolver.c  name_resolver.h  parser.c  parser.h  path.c  path.h  print.c  print.h  reader.c  reader.h  return_checker.c  return_checker.h  source_code_location.h  (+17 more)
test/: CMakeLists.txt  leb128_test.c  main.c  symbol_table_test.c  tokenizer_test.c
